...
            android:layout_height="@dimen/dp150"
            android:contentDescription="@string/imagen_de_cada_producto"
            android:transitionName="imageView"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginStart="@dimen/dp170"
...
